feat(food-logs): :sparkles: filter food logs
