# src/dtos/food-logs.dto.ts
@@ -6,6 +6,10 @@ import {
   IsNotEmpty,
   ValidateIf,
 } from 'class-validator';
+import { Mixin } from 'ts-mixer';
+
+import { DateDto } from './internal/parameters/date.dto';
+import { PaginateDto } from './internal/parameters/paginate.dto';
 
 export class CreateFoodLogDto {
   @IsISO8601()
@@ -26,3 +30,5 @@ export class UpdateFoodLogDto extends CreateFoodLogDto {
   @IsInt()
   public id: number;
 }
+
+export class GetFoodLogsDto extends Mixin(PaginateDto, DateDto) {}
