# swagger.yaml
@@ -34,6 +34,13 @@ components:
       schema:
         type: integer
         format: int64
+    get-food-log:
+      in: query
+      name: paginate food logs
+      schema:
+        allOf:
+          - $ref: '#/components/schemas/param-paginate'
+          - $ref: '#/components/schemas/param-date'
     get-symptom-log:
       in: query
       name: paginate symptom logs
@@ -405,7 +412,8 @@ paths:
       security:
         - bearerAuth: []
       summary: Get user's food logs
-      description: Pagination will be added
+      parameters:
+        - $ref: '#/components/parameters/get-food-log'
       responses:
         '200':
           description: User's food logs
